# mftp

./: AUTHORS  Makefile.am  TODO  configure.ac
include/: Makefile.am
include/mftp/: file.hpp  fileid.hpp  interval_set.hpp  match.hpp  message.hpp  mfileid.hpp  mftp.hpp  mftp_automaton.hpp  mftp_channel_automaton.hpp  mftp_receiver_automaton.hpp  mftp_sender_automaton.hpp  span.hpp
lib/: Makefile.am  file.cpp  file.cpp.validation  mftp_automaton.cpp  mftp_channel_automaton.cpp  sha2_256.cpp  sha2_256.hpp
papers/paper1/: paper.tex
src/: Makefile.am  conversion_channel_automaton.hpp  dd.hpp  describe.cpp  file.cpp  file.hpp  get.cpp  jam.hpp  mftp.hpp  mftp_automaton.hpp  mftp_receiver_automaton.hpp  mftp_sender_automaton.hpp  share.cpp  specify.cpp  udp_receiver.cpp  udp_sender.cpp
test/: Makefile.am  interval_set.cpp  interval_set.hpp  interval_tree.cpp  interval_tree.hpp
